# coding_helper_new

./: .env.example  .gitignore  README.md  launch_tui.py  pyproject.toml  requirements.txt  run_tui_test.py  setup-uv-artifactory.sh  test_tui.py  test_tui_simple.py  uv.toml.example
.coding-agent/sessions/: 93ccf1ae.json
.opencode/commands/: fix.md
coding_agent/: __init__.py  agent.py  commands.py  config.py  formatting.py  git_undo.py  llm.py  logging.py  main.py  middleware.py  permissions.py  plan.py  prompts.py  session.py  skills.py  subagent.py
coding_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coding_agent/default_skills/: readme.md
coding_agent/mcp/: __init__.py  client.py  config.py  server_manager.py  tool_adapter.py
coding_agent/tools/: __init__.py  file_ops.py  file_search.py  question.py  shell.py  task.py  todo.py  web.py
coding_agent/tui/: __init__.py  app.py  integration.py  keybinds.py  themes.py
coding_agent/tui/widgets/: chat_view.py  input_bar.py  sidebar.py  status_bar.py
tests/: test_agent.py  test_commands.py  test_git_undo.py  test_llm.py  test_plan.py  test_tools.py
