[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent"
version = "0.2.0"
description = "A local coding agent powered by LangChain"
requires-python = ">=3.10"
dependencies = [
    "langchain==1.2.17",
    "langchain-core==1.3.2",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "duckduckgo-search>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# Optional: Uncomment to use a private Artifactory index
# Replace <organization>, <repository> with your actual values
# [[tool.uv.index]]
# name = "artifactory"
# url = "https://<organization>.jfrog.io/artifactory/api/pypi/<repository>/simple"
# default = true  # Use this instead of PyPI

[project.scripts]
coding-agent = "coding_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coding_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
